--- a/IsoclineTests/IsoclineTests.csproj
+++ b/IsoclineTests/IsoclineTests.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>b65238c8-a60a-41e1-8cf8-92c4598738eb</ProjectGuid>
+    <ProjectGuid>{FCC8388B-AEEF-4861-A4AC-292E1D0E8DE7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>IsoclineTests</RootNamespace>
@@ -50,8 +50,15 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="FunctionParser_Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="FunctionExstensions_Test.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\IsoclineShower\IsoclineShower.csproj">
+      <Project>{f693614e-2b42-4998-9584-d23ed8a65bcd}</Project>
+      <Name>IsoclineShower</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
