--- a/IsoclineShower/IsoclineShower.csproj
+++ b/IsoclineShower/IsoclineShower.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{F693614E-2B42-4998-9584-D23ED8A65BCD}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>IsoclineShower</RootNamespace>
     <AssemblyName>IsoclineShower</AssemblyName>
